change in class BackGeroundProcess